# EasyLinks

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  TODO.md  cleanup_program_data.bat  cleanup_register.bat
cmake/template/: Info.plist.in  app.rc.in  config.h.in
cmake/template/InfoPlistStrings/en.lproj/: InfoPlist.strings
cmake/template/InfoPlistStrings/zh_CN.lproj/: InfoPlist.strings.in
doc/: README_EN.md  README_ZH.md  TODO.md
easylink/: CMakeLists.txt  easylink.qrc  main.cpp  settings_dialog.ui
easylink/filelink/: conflict_decision_dialog.cpp  conflict_decision_dialog.h  conflict_decision_dialog.ui  conflict_decision_filter_proxy_model.cpp  conflict_decision_filter_proxy_model.h  conflict_decision_tableview_model.cpp  conflict_decision_tableview_model.h  error_log_dialog.cpp  error_log_dialog.h  error_log_dialog.ui  filelink_manager.cpp  filelink_manager.h  progress_dialog.cpp  progress_dialog.h  progress_dialog.ui  types.h  worker.cpp  worker.h
easylink/languages/: languages.json
icon/: app.icns
languages/: en.json  zh.json
resources/: app.qrc
resources/scripts/mac/: auto_run_on_startup_format.plist  get_focused_finder_dir.sh
resources/stylesheets/: table_view.qss
scripts/: cleanup_program_data.bat  create_dmg.sh
src/: CMakeLists.txt
src/app/: about_dialog.cpp  about_dialog.ui  app.qrc  app_defines.h  app_manager.cpp  app_manager.h  auto_run_on_startup.cpp  auto_run_on_startup.h  directory_select_dialog.cpp  directory_select_dialog.h  directory_select_dialog.ui  file_log_manager.cpp  file_log_manager.h  file_logger.cpp  file_logger.h  file_review_dialog.cpp  file_review_dialog.h  file_review_dialog.ui  hotkey_handler.h  hotkey_manager.cpp  hotkey_manager.h  keycombination_inputer.cpp  keycombination_inputer.h  language.cpp  language.h  log_manager.cpp  log_manager.h  logo_icon.cpp  main.cpp  require_permission_dialog.cpp  require_permission_dialog.h  require_permission_dialog.ui  settings.cpp  settings.h  settings_dialog.cpp  settings_dialog.h  settings_dialog.ui  settings_widget.cpp  settings_widget.h  settings_widget.ui  (+2 more)
src/filelink/: conflict_decision_dialog.cpp  conflict_decision_dialog.h  conflict_decision_dialog.ui  conflict_decision_table_header.cpp  conflict_decision_table_model.cpp  conflict_decision_table_model.h  conflict_decision_table_widget.cpp  conflict_decision_tableview_model.cpp  conflict_decision_tableview_model.h  controller.cpp  controller.h  error_log_dialog.cpp  error_log_dialog.h  error_log_dialog.ui  filelink_manager.cpp  filelink_manager.h  link_config.h  manager.cpp  manager.h  pattern.h  pattern_link_worker.cpp  pattern_link_worker.h  progress_dialog.cpp  progress_dialog.h  progress_dialog.ui  progress_widget.cpp  progress_widget.h  progress_widget.ui  rename_pattern.cpp  rename_pattern.h  types.h  utils.cpp  utils.h  worker.cpp  worker.h
src/languages/: en.json  zh.json
src/platform/: permission_manager_win.cpp
src/shell/: shell_utility_win.cpp
src/utils/: file_io.cpp  file_io.h  logging.h  logo_icon.cpp  qwidget_utils.cpp  qwidget_utils.h  string_format.cpp
